--- a/Automata-Celular.cbp
+++ b/Automata-Celular.cbp
@@ -15,6 +15,12 @@
 					<Add option="-std=c++11" />
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-lGL" />
+					<Add option="-lGLU" />
+					<Add option="-lglut" />
+					<Add option="-lpthread" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Automata-Celular" prefix_auto="1" extension_auto="1" />
@@ -38,6 +44,10 @@
 		<Unit filename="NdoVrt.h" />
 		<Unit filename="Parse.cpp" />
 		<Unit filename="Parse.h" />
+		<Unit filename="Simulador.cpp" />
+		<Unit filename="Simulador.h" />
+		<Unit filename="Visualizador.cpp" />
+		<Unit filename="Visualizador.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
