metido el constructor del profe de las matrices de adyacencia

--- a/Automata-Celular.cbp
+++ b/Automata-Celular.cbp
@@ -40,11 +40,16 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="GrafoGnr.h" />
+		<Unit filename="NdoVrt.cpp" />
+		<Unit filename="NdoVrt.h" />
 		<Unit filename="Parse.cpp" />
 		<Unit filename="Parse.h" />
 		<Unit filename="SimuladoGnr.h" />
+		<Unit filename="Simulador.cpp" />
+		<Unit filename="Simulador.h" />
+		<Unit filename="Visualizador.cpp" />
+		<Unit filename="Visualizador.h" />
 		<Unit filename="VisualizadorGnr.h" />
-		<Unit filename="VrtGnr.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
