--- a/Automata-Celular.cbp
+++ b/Automata-Celular.cbp
@@ -43,6 +43,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Aves/NdoAve.cpp" />
+		<Unit filename="Aves/NdoAve.h" />
+		<Unit filename="Aves/SimuladorAves.cpp" />
+		<Unit filename="Aves/SimuladorAves.h" />
+		<Unit filename="Aves/VisualizadorAves.cpp" />
+		<Unit filename="Aves/VisualizadorAves.h" />
 		<Unit filename="GrafoGnr.h" />
 		<Unit filename="Parse.cpp" />
 		<Unit filename="Parse.h" />
@@ -54,6 +60,7 @@
 		<Unit filename="Virus/SimuladorVrs.h" />
 		<Unit filename="Virus/VisualizadorVrs.cpp" />
 		<Unit filename="Virus/VisualizadorVrs.h" />
+		<Unit filename="VisualizadorGnr.cpp" />
 		<Unit filename="VisualizadorGnr.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
