Simulador de Aves listo

--- a/Automata-Celular.cbp
+++ b/Automata-Celular.cbp
@@ -18,9 +18,10 @@
 					<Add directory="../Automata-Celular" />
 				</Compiler>
 				<Linker>
-					<Add option="-lopengl32" />
-					<Add option="-lglu32" />
-					<Add option="-lglut32" />
+					<Add option="-lGL" />
+					<Add option="-lGLU" />
+					<Add option="-lglut" />
+					<Add option="-lpthread" />
 				</Linker>
 			</Target>
 			<Target title="Release">
